# functional-programming

./: .gitignore
haskell-csv/: Main.hs  haskell-csv  haskell-csv.cabal  notebook.csv
haskell-csv1/: Main.hs  Makefile  haskell-csv.cabal  notebook.csv
my-project/: cabal.sandbox.config
my-project/.stack-work/install/x86_64-linux/lts-9.3/8.0.2/flag-cache/: ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.4.0-DeCMMzb9PSJC3zwcMXMk7s  intero-0.1.21  syb-0.7-4OKdCpwGutyB1rNRmoa0ya  terminfo-0.4.1.0-FNScbjwxa2Y3p4e5RvG3l
my-project/.stack-work/install/x86_64-linux/lts-9.3/8.0.2/lib/x86_64-linux-ghc-8.0.2/my-project-0.1.0.0-EDI2S0Q4RYhAvm4lhoI40i/: Lib.hi
my-project/.stack-work/install/x86_64-linux/lts-9.3/8.0.2/pkgdb/: my-project-0.1.0.0-EDI2S0Q4RYhAvm4lhoI40i.conf  package.cache
my-project/app/: Main.hs
my-project/src/: char.hs
second-project/: second-project.cabal
second-project/app/: Main.hs
tasks/: .gitignore  ChangeLog.md  package.yaml
tasks/app/: Main.hs
