
name:                haskell-csv
version:             0.1.0.0
synopsis:            Reading CSV from file.
-- description:         
homepage:            haskelldata.com
license:             GPL-2
license-file:        ./LICENSE
author:              Vitalii Denysiuk
maintainer:          vitalii_denysiuk@ukr.net
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable haskell-csv
  main-is:             Main.hs
  --other-modules: text      
  -- other-extensions:    
  build-depends:       base >=4.6 && <5, csv >0.1, text
  -- hs-source-dirs:      
  default-language:    Haskell2010